--- a/index.less
+++ b/index.less
@@ -49,3 +49,17 @@ body, html {
 .pg-canvas {
     position: absolute;
 }
+
+.price,.eos-icon {
+    float: left;
+    text-align: center;
+}
+
+.price {
+    font-size: 30px;
+    width: 380px;
+    @media screen and (max-width: @responsive-width) {
+        width: 160px;
+        font-size: 15px;
+    }
+}
